update inv title

--- a/index.html
+++ b/index.html
@@ -568,17 +568,17 @@
 
 
         <ul class="nav nav-pills nav-justified" id="prompt-view-ul-inv" style="width: 100%;margin-bottom: 0.5em;">
-              <li style="font-size: 0.9em;" class="active"><a href="javascript: void(0);" onclick="ChangePromptInverse(0);">Deblur</a>
+              <li style="font-size: 0.9em;" class="active"><a href="javascript: void(0);" onclick="ChangePromptInverse(0);">Gaussian Blur</a>
               </li>
-              <li style="font-size: 0.9em;" class=""><a href="javascript: void(0);" onclick="ChangePromptInverse(1);">SR</a>
+              <li style="font-size: 0.9em;" class=""><a href="javascript: void(0);" onclick="ChangePromptInverse(1);">Super-Resolution (8X)</a>
               </li>
-              <li style="font-size: 0.9em;" class=""><a href="javascript: void(0);" onclick="ChangePromptInverse(2);">MB</a>
+              <li style="font-size: 0.9em;" class=""><a href="javascript: void(0);" onclick="ChangePromptInverse(2);">Motion Blur</a>
               </li>
-              <li style="font-size: 0.9em;" class=""><a href="javascript: void(0);" onclick="ChangePromptInverse(3);">Inpaint</a>
+              <li style="font-size: 0.9em;" class=""><a href="javascript: void(0);" onclick="ChangePromptInverse(3);">Free-form Inpaint</a>
               </li>
             </ul>
             <ul class="nav nav-pills nav-justified" id="method-view-ul-inv" style="width: 100%">
-              <li style="font-size: 0.9em;" class="active"><a href="javascript: void(0);" onclick="ChangeMethodInverse(0);">GT</a>
+              <li style="font-size: 0.9em;" class="active"><a href="javascript: void(0);" onclick="ChangeMethodInverse(0);">Groundtruth</a>
               </li>
               <li style="font-size: 0.9em;" class=""><a href="javascript: void(0);" onclick="ChangeMethodInverse(1);">
                   Input </a></li>
@@ -892,7 +892,7 @@
                 </li>
               </ul>
               <ul class="nav nav-pills nav-justified" id="method-view-ul" style="width: 100%">
-                <li style="font-size: 0.9em;" class="active"><a href="javascript: void(0);" onclick="ChangeMethod(0);">GT</a>
+                <li style="font-size: 0.9em;" class="active"><a href="javascript: void(0);" onclick="ChangeMethod(0);">Groundtruth</a>
                 </li>
                 <li style="font-size: 0.9em;" class=""><a href="javascript: void(0);" onclick="ChangeMethod(1);">
                     Input </a></li>
@@ -1005,7 +1005,7 @@
         <li style="font-size: 0.9em;" class="active"><a href="javascript: void(0);" onclick="ChangeMethod(0);">Ours</a>
         </li>
         <li style="font-size: 0.9em;" class=""><a href="javascript: void(0);" onclick="ChangeMethod(1);">
-            GT </a></li>
+            Groundtruth </a></li>
         <li style="font-size: 0.9em;" class=""><a href="javascript: void(0);" onclick="ChangeMethod(2);">
             Input</a></li>
         <li style="font-size: 0.9em;" class=""><a href="javascript: void(0);"
