update yujia page

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
               <span class="author-block">
                 <a href="https://liturout.github.io/">Litu Rout</a><sup>1,2</sup>&nbsp</span>
               <span class="author-block">
-                <a href="">Yujia Chen</a><sup>2</sup>&nbsp
+                <a href="https://issaccyj.github.io/">Yujia Chen</a><sup>2</sup>&nbsp
               </span>
               <span class="author-block">
                 <a href="https://abhishek.umiacs.io/">Abhishek Kumar</a><sup>3</sup>&nbsp</span>
