--- a/index.html
+++ b/index.html
@@ -949,11 +949,13 @@
   <section class="section" id="BibTeX">
     <div class="container is-max-desktop content">
       <h2 class="title"><a id="bibtex">BibTeX</a></h2>
-      <pre><code>@article{rout2023beyond,
-      title={Beyond First-order Tweedie: Solving Inverse Problems using Latent Diffusion},
+      <pre><code>@misc{rout2023secondorder,
+      title={Beyond First-Order Tweedie: Solving Inverse Problems using Latent Diffusion}, 
       author={Rout, L and Chen, Y and Kumar, A and Caramanis, C and Shakkottai, S and Chu, W},
-      booktitle={ArXiv},
-      year={2023}
+      year={2023},
+      eprint={2312.00852},
+      archivePrefix={arXiv},
+      primaryClass={cs.LG}
 }</code></pre>
     </div>
   </section>
