--- a/index.html
+++ b/index.html
@@ -95,6 +95,9 @@
               <span class="author-block"><sup>2</sup>Google Research &nbsp</span>
               <span class="author-block"><sup>3</sup>Google DeepMind</span>
             </div>
+            <div class="is-size-5 publication-authors">              
+              <span class="author-block"><a href="https://cvpr.thecvf.com/Conferences/2024/AcceptedPapers">IEEE/CVF Conference on Computer Vision and Pattern Recognition (CVPR), 2024</a></span>
+            </div>
 
             <!-- <div class="is-size-5 publication-venue">
               Website in progress
@@ -951,11 +954,9 @@
       <h2 class="title"><a id="bibtex">BibTeX</a></h2>
       <pre><code>@misc{rout2023secondorder,
       title={Beyond First-Order Tweedie: Solving Inverse Problems using Latent Diffusion}, 
-      author={Rout, L and Chen, Y and Kumar, A and Caramanis, C and Shakkottai, S and Chu, W},
-      year={2023},
-      eprint={2312.00852},
-      archivePrefix={arXiv},
-      primaryClass={cs.LG}
+      author={Rout, L and Chen, Y and Kumar, A and Caramanis, C and Shakkottai, S and Chu, W},      
+      journal={IEEE/CVF Conference on Computer Vision and Pattern Recognition (CVPR)},
+      year={2024}
 }</code></pre>
     </div>
   </section>
